[package]
name = "web_api_scraper"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
reqwest = { version = "0.10.1", features = ["blocking"] }
anyhow = "1.0.26"
lazy_static = "1.4.0"
